--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,12 @@
   <title>Data Collector App</title>
   <head>
     <link href="../static/main.css" rel="stylesheet">
+    <meta name="google-signin-client_id" content="10392417901-r4kd37fv96t25i50n582mgqadea8jobv.apps.googleusercontent.com.apps.googleusercontent.com">
   </head>
   <body>
     <div class="container">
       <h1>Collecting height</h1>
-      <h3>Please fill the tntries to get population statistics on height</h3>
+      <h3>Please fill the entries to get population statistics on height</h3>
       <div class="message">
         {{text | safe}}
       </div>
@@ -16,6 +17,9 @@
         <input title="Your data will be safe" placeholder="Enter your height in cm" type="number" min="50", max="300" step="0.01" name="height_name" required> <br>
         <button type="submit">Submit</button>
       </form>
+      <div class="g-signin2" data-onsuccess="onSignIn"></div>
     </div>
   </body>
 </html>
+
+<script src="https://apis.google.com/js/platform.js" async defer></script>
