--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <title>Data Collector App</title>
   <head>
     <link href="../static/main.css" rel="stylesheet">
-    <meta name="google-signin-client_id" content="10392417901-r4kd37fv96t25i50n582mgqadea8jobv.apps.googleusercontent.com.apps.googleusercontent.com">
+    <meta name="google-signin-client_id" content="10392417901-r4kd37fv96t25i50n582mgqadea8jobv.apps.googleusercontent.com">
   </head>
   <body>
     <div class="container">
