--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         {{text | safe}}
       </div>
       <form action="{{url_for('success')}}" method="POST">
-        <input title="Your email will be safe" placeholder="Enter your email address" type="email" name="email_name" required> <br>
+        <input id="my_email" title="Your email will be safe" placeholder="Enter your email address" type="email" name="email_name" required> <br>
         <input title="Your data will be safe" placeholder="Enter your height in cm" type="number" min="50", max="300" step="0.01" name="height_name" required> <br>
         <button type="submit">Submit</button>
       </form>
@@ -25,7 +25,7 @@
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <script>
   function onSignIn(googleUser) {
-    document.getElementByName("email_name").value="testing";
+    document.getElementById('my_email').value='testing';
     console.log(googleUser.getBasicProfile().getName());
     var profile = googleUser.getBasicProfile();
     console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
