--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <script>
   function onSignIn(googleUser) {
-    document.getElementById('my_email').value='googleUser.getBasicProfile().getEmail()';
+    document.getElementById('my_email').value=googleUser.getBasicProfile().getEmail();
     console.log(googleUser.getBasicProfile().getName());
     var profile = googleUser.getBasicProfile();
     console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
