--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
         <input title="Your data will be safe" placeholder="Enter your height in cm" type="number" min="50", max="300" step="0.01" name="height_name" required> <br>
         <button type="submit">Submit</button>
       </form>
-      <div class="g-signin2" data-onsuccess="onSignIn"></div>
+      <div class="g-signin2" data-onsuccess="onSignIn">.</div>
       <a href="#" onclick="signOut();">Sign out</a>
     </div>
   </body>
@@ -39,6 +39,7 @@
     auth2.signOut().then(function () {
       console.log('User signed out.');
     });
+    document.getElementById('my_email').value='';
   }
 
 
