--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
         <input title="Your data will be safe" placeholder="Enter your height in cm" type="number" min="50", max="300" step="0.01" name="height_name" required> <br>
         <button type="submit">Submit</button>
       </form>
-      <div id="my-g-button" class="g-signin2" data-onsuccess="onSignIn">.</div>
+      <div id="my-g-button" class="g-signin2" data-onsuccess="onSignIn">button</div>
       <a href="#" onclick="signOut();">Sign out</a>
     </div>
   </body>
@@ -33,7 +33,4 @@
     auth2.signOut();
     document.getElementById('my_email').value='';
   }
-
-
-
 </script>
